--- a/index.qmd
+++ b/index.qmd
@@ -11,3 +11,7 @@ En esta página web puedes encontrar información acerca de la primera edición 
 ##### José Ignacio Márquez-Corro ([jimarcorr\@gmail.com](mailto:jimarcorr@gmail.com))
 
 ##### Sara Martín Hernanz ([sara.martin.hernanz\@gmail.com](mailto:sara.martin.hernanz@gmail.com))
+
+
+Echa un ojo a la nota publicada en Conservación Vegetal
+[SEBOTA: un encuentro para conocer de cerca la diversidad de nuestra flora](https://conservacionvegetal.org/wp-content/uploads/2023/12/CONSERVACION-27_OK.pdf#page=50)
