--- a/paneles/Taxus_baccata.qmd
+++ b/paneles/Taxus_baccata.qmd
@@ -4,18 +4,18 @@ sortby: 1
 subtitle: Taxaceae
 toc: false
 about:
-  id: person-profile
+  id: profile
   template: marquee
  
 ---
 
-:::{#person-profile}
+:::{#profile}
 :::
 
 
-![Ficha Taxus](paneles_Taxus baccata_TAXACEAE.png){width=95%}
+![Taxus baccata](paneles/paneles_Taxus baccata_TAXACEAE.png){width=95%}
 
-<iframe width="100%" height="600" src="paneles_Taxus baccata_TAXACEAE.pdf"></iframe>
+<iframe width="100%" height="600" src="fichas/paneles_Taxus baccata_TAXACEAE.pdf"></iframe>
 
 
 
