--- a/paneles/Taxus_baccata.qmd
+++ b/paneles/Taxus_baccata.qmd
@@ -13,7 +13,7 @@ about:
 :::
 
 
-![Taxus baccata](paneles/paneles_Taxus baccata_TAXACEAE.png){width=95%}
+![Taxus baccata](paneles/paneles_Taxus baccata_TAXACEAE.jpg){width=95%}
 
 <iframe width="100%" height="600" src="fichas/paneles_Taxus baccata_TAXACEAE.pdf"></iframe>
 
