--- a/index.qmd
+++ b/index.qmd
@@ -8,3 +8,8 @@ En esta página web puedes encontrar información acerca de los paneles de flora
 
 
 
+##### Ignacio Ramos Gutiérrez ([ignacio.ramosgutierrez\@gmail.com](mailto:ignacio.ramosgutierrez@gmail.com))
+
+##### Juan Antonio Calleja Alarcón ([juan.calleja\@uam.es](mailto:juan.calleja@uam.es))
+
+##### Nagore García Medina ([nagore.garcia\@uam.es](mailto:nagore.garcia@uam.es))
